--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,12 +4,11 @@
 
 
 body {
-    background: #0f0f10;
-    color: #fff;
-  }
-  
-  input,
-  textarea {
-    color: #000;
-  }
-   
+  background: linear-gradient(to right, #bfdbfe, #e9d5ff); /* blue-100 to purple-100 */
+  color: #fff;
+}
+
+input,
+textarea {
+  color: #000;
+}
